# Altered-States-2

./: .clang-format  CMakeLists.txt  README.md  altered-states-2.cpp  altered-states.cpp  fetch-population.py
cmake/: CompilerWarnings.cmake
include/: find_best_result.hpp  find_letter_occurrences.hpp  optimize-matrix.hpp  state-populations.h  state_populations.hpp  states_correlation.hpp
json/: default-matrix-iter-1.json  default-matrix-iter-2.json  default-matrix-iter-3.json  default-matrix-iter-4.json  default-matrix.json  result-matrix.json  state-correlation.json  state-population.json
result/: result-string.txt
src/: find_best_result.cpp  find_letter_occurrences.cpp  optimize-matrix.cpp  states_correlation.cpp
test/: CMakeLists.txt  validate-score.cpp
